Updated example templates

--- a/Abstractions/UIConcept/UIConcept/ExampleUI_1.html
+++ b/Abstractions/UIConcept/UIConcept/ExampleUI_1.html
@@ -1,15 +1,17 @@
 ﻿ 
+
+
 <html>
 <div>Services count: 2</div>
 <div id="serviceBeginTestService">Service TestService starts here</div>
-Whaat?? MDx - non html
+include template Whaat?? MDx - non html
 
 Description: Test service description
 
 <div id="serviceEndTestService">Service TestService ends here</div>
 		
 <div id="serviceBeginXyz">Service Xyz starts here</div>
-Whaat?? MDx - non html
+include template Whaat?? MDx - non html
 
 Description: Test service description
 
